# home-snitch

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: home_wiki_build_plan.md
docs/schemas/: home_wiki_answer.schema.json
docs/specs/: README.md
docs/specs/demo/: agent-provider-modes-spec.md  demo-readiness-spec.md
docs/specs/phase-0-foundation/: 00-phase-overview.md  A-project-contracts-and-config.md  K-fixtures-and-smoke-tests.md
docs/specs/phase-1-parallel-building-blocks/: 00-phase-overview.md  B-device-profile-store.md  C-document-conversion-lift.md  D-lancedb-embedding-search-foundation.md  F-device-resolver.md  (+2 more)
fixtures/: README.md
fixtures/api/: api-error.json  ask-evidence-only-bosch-e15.json  device-information-bosch.json  device-information-router.json  device-information-siemens.json  devices-list.json  search-ambiguous-dishwasher.json  search-scoped-bosch-e15.json
fixtures/demo/: scenarios.json
fixtures/expected/: scenarios.json
fixtures/web/: duckduckgo-manual-search.html
homewiki/: __init__.py  agent.py  api.py  ask_service.py  chunking.py  config.py  conversion.py  devices.py  embeddings.py  gguf_embeddings.py  ingest.py  lancedb_store.py  llm.py  manuals.py  prompts.py  resolver.py  schemas.py  search_service.py
scripts/: demo_check.py  demo_reset.py  demo_seed.py  device_add.py  device_list.py  device_resolve.py  docs_convert.py  index_build.py  ingest.py  manual_download.py  manual_find.py  run_smoke_tests.py
seeds/factory/: alerts.json  load.py
tests/: test_agent_api.py  test_api_ask.py  test_api_routes.py  test_api_search.py  test_ask_service.py  test_chunking.py  test_config.py  test_conversion.py  test_demo.py  test_devices.py  test_fixtures_and_smoke.py  test_ingest.py  test_lancedb_store.py  test_llm.py  test_manuals.py  test_resolver.py  test_schemas.py  test_search_service.py
ui/: HANDOFF.md  README.md  index.html  package.json  server.py  styles.css
ui-next/: app.js  index.html  server.py  styles.css
ui/src/: agent.js  api.js  app.js  device.js  fixtures.js  render.js
ui/test/: schema_contracts.py  ui.test.js
(+46 files in other folders)
