[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "home-snitch"
version = "0.1.0"
description = "Local home wiki contracts, config, and retrieval tooling."
readme = "docs/home_wiki_build_plan.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["homewiki*"]

[tool.setuptools.package-data]
homewiki = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
