[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "home-snitch"
version = "0.1.0"
description = "Local home wiki contracts, config, and retrieval tooling."
readme = "docs/home_wiki_build_plan.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "lancedb>=0.30,<1",
  "pydantic>=2.8,<3",
  "pymupdf>=1.24,<2",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]
local-gguf = [
  "huggingface-hub>=0.23,<1",
  "llama-cpp-python>=0.3,<1",
]

[tool.setuptools.packages.find]
include = ["homewiki*"]

[tool.setuptools.package-data]
homewiki = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
